--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@
   margin: 0;
 }
 
+html {
+  font-family: sans-serif;
+}
+
 body {
   width: 100vw;
   height: 100vh;
+  background-color: antiquewhite;
 }
