--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -4,23 +4,32 @@ nav {
     height: 100px;
     width: 100%;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     border-bottom: 1px solid black;
 }
 
 .navLink {
     text-decoration: none;
+    text-transform: capitalize;
     font-size: 18px;
     text-align: center;
     color: black;
     width: 200px;
 }
 
+
 .brandText {
     font-size: 32px;
     font-weight: bold;
+    background-color: #080708;
+    color:  aliceblue;
+    line-height: 100px;
 }
 
 .navLink:not(.brandText):hover {
+    text-decoration: line-through;
+}
+
+.active {
     text-decoration: line-through;
 }
