--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -1,5 +1,34 @@
 
 .cartContainer {
     display: flex;
+    justify-content: left;
+    gap: 50px;
+}
+
+.cartContainer h2 {
+    text-align: center;
+}
+
+.cartItemList {
+    display: flex;
+    max-height: 80vh;
+    overflow-y: auto;
     flex-direction: column;
+    gap: 10px;
+}
+
+.checkoutBtn {
+    border: unset;
+    color: white;
+    font-weight: bold;
+    background-color: black;
+    padding: 10px;
+}
+
+.checkoutContainer {
+    display: flex;
+    height: 400px;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: flex-start;
 }
